@@ -33,10 +33,13 @@ import TestUnit
 
 import SCons.Errors
 import SCons.Platform
+import SCons.Environment
+import SCons.Action
 
 class Environment(collections.UserDict):
     def Detect(self, cmd):
         return cmd
+    
     def AppendENVPath(self, key, value):
         pass
 
@@ -117,9 +120,54 @@ class PlatformTestCase(unittest.TestCase):
         SCons.Platform.Platform()(env)
         assert env != {}, env
 
+class TempFileMungeTestCase(unittest.TestCase):
+    def test_TempFileMunge(self):
+        """Test the TempFileMunge() class, more specifically the
+           MAXLINELENGTH setting.
+           We try setting different maximum line lengths for a
+           fixed command string and ensure that the tempfile mechanism
+           kicks in at MAXLINELENGTH+1.
+        """
+        # Init class with cmd, such that the fully expanded
+        # string reads "a test command line".
+        # Note, how we're using a command string here that is
+        # actually longer than the substituted one. This is to ensure
+        # that the TempFileMunge class internally really takes the
+        # length of the expanded string into account.
+        defined_cmd = "a $VERY $OVERSIMPLIFIED line"
+        t = SCons.Platform.TempFileMunge(defined_cmd)
+        env = SCons.Environment.SubstitutionEnvironment(tools=[])
+        # Setting the line length high enough...
+        env['MAXLINELENGTH'] = 1024
+        env['VERY'] = 'test'
+        env['OVERSIMPLIFIED'] = 'command'
+        expanded_cmd = env.subst(defined_cmd)
+        # Call the tempfile munger
+        cmd = t(None,None,env,0)
+        assert cmd == defined_cmd, cmd
+        # Let MAXLINELENGTH equal the string's length
+        env['MAXLINELENGTH'] = len(expanded_cmd)
+        cmd = t(None,None,env,0)
+        assert cmd == defined_cmd, cmd
+        # Finally, let the actual tempfile mechanism kick in
+        # Disable printing of actions...
+        old_actions = SCons.Action.print_actions
+        SCons.Action.print_actions = 0
+        env['MAXLINELENGTH'] = len(expanded_cmd)-1
+        cmd = t(None,None,env,0)
+        # ...and restoring its setting.
+        SCons.Action.print_actions = old_actions
+        assert cmd != defined_cmd, cmd
 
 if __name__ == "__main__":
-    suite = unittest.makeSuite(PlatformTestCase, 'test_')
+    suite = unittest.TestSuite()
+    
+    tclasses = [ PlatformTestCase,
+                 TempFileMungeTestCase ]
+    for tclass in tclasses:
+        names = unittest.getTestCaseNames(tclass, 'test_')
+        suite.addTests(list(map(tclass, names)))
+    
     TestUnit.run(suite)
 
 # Local Variables:
